Adds maven central repository to fix gradle build

--- a/commons-math-master/build.gradle
+++ b/commons-math-master/build.gradle
@@ -9,6 +9,7 @@ plugins {
 
 repositories {
     mavenLocal()
+    mavenCentral()
     maven {
         url = uri('https://repository.apache.org/snapshots')
     }
