--- a/gradle/commons-math3-3.6.1-src/build.gradle
+++ b/gradle/commons-math3-3.6.1-src/build.gradle
@@ -5,6 +5,7 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id "com.vanniktech.dependency.graph.generator" version "0.5.0"
 }
 
 repositories {
