--- a/maven/commons-math3-3.6.1-src/pom.xml
+++ b/maven/commons-math3-3.6.1-src/pom.xml
@@ -414,6 +414,11 @@
   <build>
       <plugins>
         <plugin>
+          <groupId>com.github.ferstl</groupId>
+          <artifactId>depgraph-maven-plugin</artifactId>
+          <version>3.3.0</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
