--- a/maven/guava-30.0/guava/pom.xml
+++ b/maven/guava-30.0/guava/pom.xml
@@ -48,6 +48,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>com.github.ferstl</groupId>
+        <artifactId>depgraph-maven-plugin</artifactId>
+        <version>3.3.0</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
