--- a/maven/guava-30.0/pom.xml
+++ b/maven/guava-30.0/pom.xml
@@ -85,6 +85,11 @@
     </testResources>
     <plugins>
       <plugin>
+        <groupId>com.github.ferstl</groupId>
+        <artifactId>depgraph-maven-plugin</artifactId>
+        <version>3.3.0</version>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <executions>
