--- a/bazel/commons-math3-3.6.1-src/WORKSPACE
+++ b/bazel/commons-math3-3.6.1-src/WORKSPACE
@@ -18,7 +18,8 @@ maven_install(
         "org.piccolo2d:piccolo2d-core:3.0.1",
         "org.apache.commons:commons-lang3:3.11",
         "com.xeiam.xchart:xchart:2.5.1",
-        "org.hamcrest:hamcrest-core:2.2"
+        "org.hamcrest:hamcrest-core:2.2",
+		"org.hamcrest:hamcrest:2.2"
     ],
     repositories = [
         "https://repo1.maven.org/maven2",
